fix: :bug: add missing colors

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,9 @@
     --muted: 240 3.7% 15.9%;
     --muted-foreground: 240 5% 64.9%;
 
+    --popover: 240 10% 3.9%;
+    --popover-foreground: 0 0% 98%;
+
     --accent: 240 3.7% 15.9%;
     --accent-foreground: 0 0% 98%;
 
